adding recentely updated changes to hero.cc and index.html files

--- a/hero.css
+++ b/hero.css
@@ -67,3 +67,43 @@
 .credo-divs:hover .credo-para, .credo-divs:focus .credo-para, .credo-divs:active .credo-para {
     display: flex;
 }
+
+#skillset-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+#skillset-wrapper h1 {
+    font-size:
+    color:
+}
+
+#skills-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.skills {
+    width: 15%;
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.skills i {
+
+}
+
+.skills h3 {
+
+}
+
+.skills p {
+
+}
+
