Pushing updated code and images.

--- a/variables.css
+++ b/variables.css
@@ -1,7 +1,8 @@
 :root {
-    --neonpink: #fe39d6;
-    --neonblue: #022cd4;
-    --lighblue: #03b3f2;
-    --white: #ffffff;
-    --black: #000000;
+  --neonpink: #c5247e;
+  --neonblue: #022cd4;
+  --lighblue: #03b3f2;
+  --white: #ffffff;
+  --black: #000000;
+  --gray: #a9a9a9;
 }
