--- a/navbar.css
+++ b/navbar.css
@@ -2,46 +2,46 @@
     background-color: transparent;
 } */
 
-
-
 .my-name-navbar-brand {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    /* font-style: bold; */
-    color: white;
-    font-size: 18px;
-    letter-spacing: 1.5px;
-    padding-top: .45rem;
-    padding-left: 1rem;
-    word-spacing: .3rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: medium 500;
+  /* font-style: bold; */
+  color: white;
+  font-size: 18px;
+  letter-spacing: 1.5px;
+  padding-top: 0.45rem;
+  /* padding-left: 1rem; */
+  word-spacing: 0.3rem;
+  margin-left: -2em;
 }
 
 .navbar {
-    position: fixed;
-    overflow: hidden;
-    width: 100%;
-    z-index: 1;
-    background-color: transparent !important;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  z-index: 1;
+  background-color: transparent !important;
 }
 
 .navbar-nav {
-    margin-left: auto;
-} 
+  margin-left: auto;
+  margin-right: -3em;
+}
 
 .navLink {
-    color: white;
-    font-size: 16px;
-    padding: 1rem;
-    text-decoration: none;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    /* font-style: bold; */
+  color: white;
+  font-size: 16px;
+  padding: 1rem;
+  text-decoration: none;
+  letter-spacing: 1.5px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: medium 500;
+  /* font-style: bold; */
 }
 
 .navLink:hover {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 /* .hero {
@@ -74,17 +74,6 @@
     background-position: center center;
 } */
 
-.about-me {
-    height: 50vh;
-    width: 100%;
-}
-
-.credo {
-    height: 50vh;
-    width: 100%;
-}
-
-
 /* nav a {     
 font-family: 'Montserrat', sans-serif;
 font-weight: 400;
@@ -93,7 +82,7 @@ color: white;
 font-size: 16px;
 letter-spacing: 1.5px;
 /* word-spacing: 0px; */
-/* } */ 
+/* } */
 
 /* #navBarNav {
    background-color: transparent;
