--- a/about.css
+++ b/about.css
@@ -1,19 +1,51 @@
+.section-padding {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 #about-me {
   height: 50vh;
   width: 100%;
+  line-height: 1.8;
+  color: #71797e;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
   /* break-after: auto; */
 }
 
-.section-padding {
+/* .about-container {
+  /* padding-bottom: 60px; */
+/* column-count: 3;
+  column-gap: 40px;
+} */
+
+.para1 {
+  text-align: left;
+}
+
+.about-me-title {
   padding-top: 75px;
-  padding-bottom: 75px;
+  text-align: center;
+}
+
+.section-padding {
+  padding-top: 65px;
+  padding-bottom: 55px;
+  padding-left: auto;
+  padding-right: auto;
+}
+
+.about-me-title {
+  color: #000000;
+  font-family: "Montserrat", sans-serif;
+  font-weight: medium 500;
+  font-size: 24px;
 }
 
 hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1 px solid gray;
-  margin: 2em;
-  padding: 0;
+  border-top: 2px solid #5d1a80;
 }
