--- a/hero.css
+++ b/hero.css
@@ -1,31 +1,20 @@
-.hero {
-    /* border: 5px solid red; */
-    height: 100vh;
-    width: 100%;
-    background-image: url(../PortfolioProject/assets/final\ image\ 2\ of\ 2.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* opacity: .75; */
+.hero-background {
+  background: url(../PortfolioProject/assets/background.jpeg) fixed;
+  background-size: cover;
+  height: 100vh;
 }
 
-/* .hero:hover {
-    opacity: 1;
-} */
-
 .hero-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 6%;
+  padding-top: 8%;
 }
 
 .logo-image {
-    height: 50%;
-    /* width: 50%; */
-}
-
-.hero-image {
-    height: 100%;
-    width: 100%;
+  height: auto;
+  width: 700px;
+  /* padding-bottom: 6%;
+  padding-top: 10%; */
 }
