--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-@import "variables.css"; 
-@import "body.css";
+@import "variables.css";
+@import "mainContainer.css";
 @import "navbar.css";
 @import "about.css";
 @import "hero.css";
@@ -7,3 +7,13 @@
 @import "portfolio.css";
 @import "resume.css";
 @import "skillset.css";
+@import "responsive.css";
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
