--- a/skillset.css
+++ b/skillset.css
@@ -1,39 +1,113 @@
 #skillset-wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+  height: 60vh;
 }
 
-#skillset-wrapper h1 {
-    font-size:
-    color:
+.h1-my-skillset {
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 80px;
+  /* align-content: center;
+  align-items: center; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* width: 100px; */
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  /* align-content: center;
+  align-items: center; */
 }
 
-#skills-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
+#skills-div {
+  /* width: 15%;
+  width: 20%;
+  padding: 1em;
+  margin: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  border: 1px solid white;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto; */
+  /* flex: 1; */
+  margin: 3.5em;
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
-.skills {
-    width: 15%;
-    margin: 1em;
-    display: flex;
-    flex-direction: column;
+/* button {
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: white;
+  color: black;
+  border: none;
+  outline: none;
+} */
+
+.skill-text {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: medium 500;
+  text-align: center;
 }
 
-.skills i {
-
+.fab {
+  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
 }
 
-.skills h3 {
-
+.far {
+  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
 }
 
-.skills p {
-
+.fa-html5:hover {
+  color: #c5247e !important;
 }
 
+.fa-bootstrap:hover {
+  color: #c5247e !important;
+}
+
+.fa-edit:hover {
+  color: #c5247e !important;
+}
+
+.fa-js-square:hover {
+  color: #c5247e !important;
+}
+
+.fa-react:hover {
+  color: #c5247e !important;
+}
+
+.fa-node-js:hover {
+  color: #c5247e !important;
+}
+
+.fa-github:hover {
+  color: #c5247e !important;
+}
+
+.skill-text:hover {
+  color: #c5247e !important;
+}
+
+/* .button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: medium 500;
+  font-size: 14px;
+  background: white;
+  color: black;
+}
+
+.selected {
+  color: #c5247e;
+  background: white;
+} */
