--- a/about.css
+++ b/about.css
@@ -4,11 +4,11 @@
 }
 
 #about-me {
-  height: 50vh;
-  width: 100%;
+  /* height: 50vh; */
+  /* width: 100%; */
   line-height: 1.8;
   color: #71797e;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: 300;
   font-size: 16px;
   /* break-after: auto; */
@@ -20,29 +20,22 @@
   column-gap: 40px;
 } */
 
-.para1 {
+.para {
   text-align: left;
+  padding-bottom: 20px;
 }
 
 .section-padding {
-  padding-top: 65px;
-  padding-bottom: 55px;
   padding-left: auto;
   padding-right: auto;
 }
 
 .about-me-title {
   color: #000000;
-  font-family: "Montserrat", sans-serif;
-  font-weight: medium 500;
+  font-family: 'Raleyway', sans-serif;
+  font-weight: 500;
   font-size: 30px;
-  padding-top: 75px;
+  /* padding-top: 25px; */
   text-align: center;
-}
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 2px solid #5d1a80;
+  padding-top: 25px;
 }
