--- a/credo.css
+++ b/credo.css
@@ -1,71 +1,24 @@
 #credo-wrapper {
-  /* break-before: auto; */
-  /* height: 85vh; */
-  /* width: 100%; */
-  /* height: auto; */
-  /* padding: 1em; */
-  /* margin: 0; */
-  /* flex-wrap: wrap; */
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* flex-direction: column-reverse; */
-  /* align-items: center;
-  align-content: center;
-  justify-content: center; */
-  /* margin-left: auto; */
-  /* margin-right: auto; */
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
-  /* justify-content: space-evenly; */
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-gap: 40px;
-  /* line-height: 10%; */
-  margin: 20px;
+  /* height: 75vh; */
 }
 
-.credo-container {
-  height: 75vh;
+.my-credo-title {
   text-align: center;
-  align-content: center;
-  justify-content: center;
-  justify-content: space-evenly;
-  align-items: center;
-  align-content: center;
-}
-
-.h1-my-credo {
-  text-align: center;
+  /* display: flex; */
+  /* align-content: center; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* align-content: center; */
   font-size: 30px;
   color: black;
   font-family: "Montserrat", sans-serif;
   font-weight: medium 500;
-  padding-top: 70px;
+  padding-top: 75px;
 }
 
 .credo-divs {
-  /* width: 20%; */
-  /* padding: 1em; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* flex-direction: row; */
-  /* justify-content: center; */
-  justify-content: space-evenly;
-  align-items: center;
-  align-content: center;
   text-align: center;
-  justify-content: center;
-  /* border: 1px solid white; */
   margin: 50px;
-  padding-bottom: 60px;
-  /* padding-top: 60px; */
-  /* margin-left: auto;
-  margin-right: auto; */
-  width: 70px;
-  line-height: -30rem;
-  /* flex: 0 0 50px; */
-  /* margin: 5px; */
 }
 
 /* .h1 {
@@ -178,8 +131,8 @@
 }
 
 .credo-image {
-  display: flex;
-  flex-direction: row;
+  /* display: flex; */
+  /* flex-direction: row; */
   justify-content: center;
   align-items: center;
   align-content: center;
