--- a/navbar.css
+++ b/navbar.css
@@ -17,12 +17,6 @@
   background-color: transparent !important;
 }
 
-/* .container-fluid {
-  display: flex !important;
-  justify-content: space-between !important;
-  flex-direction: row !important;
-} */
-
 .navbar-brand {
   font-family: "Montserrat", sans-serif;
   font-weight: medium 500;
@@ -34,6 +28,10 @@
   /* padding-left: 1rem; */
   word-spacing: 0.3rem;
   /* margin-left: -2em; */
+}
+
+.custom-toggler .navbar-toggler-icon {
+ border-color: rgb(255, 255, 255);
 }
 
 #nav-over {
