--- a/skillset.css
+++ b/skillset.css
@@ -66,12 +66,28 @@
 }
 
 #skill-html {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: "Source Sans Pro", serif;
+  font-weight: 400;
+}
+#skill-bootstrap {
   display: none;
   text-align: center;
   justify-content: center;
   font-size: 20px;
   font-family: "Source Sans Pro", serif;
   font-weight: 400;
+}
+#fa-html5,
+#html-css {
+  color: #c5247e;
+}
+
+.bootstrap:hover {
+  color: #c5247e;
 }
 
 .fab {
