--- a/hero.css
+++ b/hero.css
@@ -1,10 +1,21 @@
-/* .background {
-background-image: url('./assets/FinalBackgroundImageLarge.jpeg');
-background-repeat: no-repeat;
-background-size: contain;
-background-position: center;
-} */
+#logo {
+  max-width: 400px;
+  position: absolute;
+  z-index: 1;
+  left: 40%;
+  top: 25%;
+}
 
+
+
+/* MEDIA QUERY 1000 */
+
+#logo {
+  max-width: 300px;
+  position: absolute;
+  left: 35%;
+  top: 20%;
+}
 
 /* .hero-content {
   display: flex;
