--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 .section-padding {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  margin-top: 156.25%;
+  margin-bottom: 156.25%;
 }
 
 #about-me {
@@ -8,8 +8,8 @@
   /* width: 100%; */
   line-height: 1.8;
   color: #71797e;
-  font-family: 'Roboto Slab', serif;
-  font-weight: 300;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   /* break-after: auto; */
 }
@@ -32,10 +32,17 @@
 
 .about-me-title {
   color: #000000;
-  font-family: 'Raleyway', sans-serif;
-  font-weight: 500;
-  font-size: 30px;
+  font-family: "Alegreya" serif;
+  font-weight: 400;
+  font-size: 27px;
   /* padding-top: 25px; */
   text-align: center;
-  padding-top: 25px;
+  margin-top: 100px;
 }
+
+hr {
+  margin-top: 9rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(113, 121, 126, 1); 
+  }
