--- a/credo.css
+++ b/credo.css
@@ -5,16 +5,19 @@
   /* justify-content: center; */
   /* align-items: center; */
   /* align-content: center; */
-  font-size: 30px;
+  font-size: 34px;
   color: black;
-  font-family: "Montserrat", sans-serif;
-  font-weight: medium 500;
-  padding-top: 75px;
+  font-family: "Playfair Display", serif;
+  font-weight: 500;
+  margin-top: 100px;
 }
 
 .credo-divs {
   text-align: center;
   margin: 50px;
+  /* padding-bottom: 2000px; */
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 /* .h1 {
@@ -34,96 +37,96 @@
 
 .h1-credo {
   font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+  font-family: "source sans pro", sans-serif;
+  font-weight: 400;
   color: #71797e;
   margin-left: auto;
   margin-right: auto;
-  width: 100px;
+  width: 6.188%;
+  text-align: center;
 }
 
 .h3-section-imagine {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
-  padding-left: 5px;
-  margin: 10px;
+  /* padding-left: .309%; */
+  margin: .619%;
 }
 
 .h3-section-enthusiasm {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
-  padding-left: 5px;
-  margin: 5px;
+  /* padding-left: .309%; */
+  margin: .309%;
 }
 
 .h3-section-detail-oriented {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  padding-left: 23px;
-  margin-right: 20px;
+  /* padding-left: 1.35%; */
+  margin-right: 1.238%;
 }
 
 .h3-section-dedication {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  padding-left: 10px;
 }
 
 .h3-section-communication {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  margin-right: 40px;
+  margin-left: .619%;
 }
 
 .h3-section-teamwork {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  margin-right: 20px;
-  padding-left: 5px;
+  /* padding-right: 2.05%; */
+  margin-left: 6.5%;
 }
 
 .h3-section-teamwork {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  margin-right: 20px;
-  padding-left: 5px;
+  margin-left: 1.5%;
+  /* padding-left: 5px; */
 }
 
 .h3-section-success {
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
   justify-items: center;
-  margin-left: 12px;
-  padding-left: 5px;
+  margin-left: .743%;
+  /* padding-left: 5px; */
 }
 
 .credo-image {
@@ -141,7 +144,7 @@
 .credo-para {
   display: none;
   font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   text-align: center;
   justify-content: center;
@@ -159,3 +162,10 @@
 .credo-divs:active .h1-credo {
   display: none;
 }
+
+hr {
+  margin-top: 5rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(113, 121, 126, 1); 
+  }
