--- a/skillset.css
+++ b/skillset.css
@@ -1,20 +1,16 @@
-.skillset-wrapper {
-  height: 100vh;
-}
-
 .h1-my-skillset {
-  font-size: 30px;
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 75px;
   /* align-content: center;
   align-items: center; */
   /* margin-left: auto;
   margin-right: auto; */
   /* width: 100px; */
-  font-family: "Montserrat", sans-serif;
-  font-weight: medium 500;
+  font-family: "Alegreya", serif;
+  font-weight: 400;
+  font-size: 32px;
   /* align-content: center;
   align-items: center; */
 }
@@ -34,7 +30,7 @@
   margin-left: auto;
   margin-right: auto; */
   /* flex: 1; */
-  margin: 3.5em;
+  margin: 4rem;
   /* display: flex; */
   /* justify-content: center; */
 }
@@ -49,19 +45,28 @@
 } */
 
 .skill-text {
-  font-size: 28px;
-  font-family: "Playfair Display", serif;
-  font-weight: bold 700;
+  font-size: 20px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
   text-align: center;
   /* letter-spacing: 1px; */
 }
 
-#skill-summary {
+/* #skill-summary {
   display: none;
   text-align: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 18px;
   font-family: "Source Sans Pro", serif;
+  font-weight: 400;
+} */
+
+#html-css {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
 }
 
@@ -69,35 +74,136 @@
   display: block;
   text-align: center;
   justify-content: center;
-  font-size: 20px;
-  font-family: "Source Sans Pro", serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
 }
-#skill-bootstrap {
-  display: none;
+
+#bootstrap-5 {
+  display: block;
   text-align: center;
   justify-content: center;
-  font-size: 20px;
-  font-family: "Source Sans Pro", serif;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
 }
-#fa-html5,
+
+#skill-bootstrap {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#wire-frame {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400; 
+}
+
+#skill-wireframe {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#java-script {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.skill-js {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#re-act {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.skill-react {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#node-js {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.skill-node {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#git-hub {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.skill-git {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+/* #fa-html5,
 #html-css {
   color: #c5247e;
-}
+} */
 
 .bootstrap:hover {
   color: #c5247e;
 }
 
 .fab {
-  padding-bottom: 40px;
+  padding-bottom: 21.875%;
   display: flex;
   justify-content: center;
 }
 
 .far {
-  padding-bottom: 40px;
+  padding-bottom: 21.875%;
   display: flex;
   justify-content: center;
 }
