uploading modified version of css, html and js

--- a/about.css
+++ b/about.css
@@ -32,7 +32,7 @@
 
 .about-me-title {
   color: #000000;
-  font-family: "Alegreya" serif;
+  font-family: "Alegreya", serif;
   font-weight: 400;
   font-size: 27px;
   /* padding-top: 25px; */
