--- a/about.css
+++ b/about.css
@@ -8,9 +8,9 @@
   /* width: 100%; */
   line-height: 1.8;
   color: #71797e;
-  font-family: "Lato", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   /* break-after: auto; */
 }
 
@@ -32,9 +32,9 @@
 
 .about-me-title {
   color: #000000;
-  font-family: "Alegreya", serif;
+  font-family: "Playfair Display", serif;
   font-weight: 400;
-  font-size: 27px;
+  font-size: 32px;
   /* padding-top: 25px; */
   text-align: center;
   margin-top: 100px;
