--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 @import "projects.css";
 @import "resume.css";
 @import "skillset.css";
+@import "imageDivider.css"
 /* @import "responsive.css"; */
 
 /* html {
