--- a/projects.css
+++ b/projects.css
@@ -1,8 +1,18 @@
 .portfolio {
-    margin-top: 100px;
     font-family: "Playfair Display", serif;
     font-size: 32px;
     text-align: center;
+    margin-top: 100px;
+    margin-bottom: 75px;
+}
+
+.container {
+    /* margin-top: 100px; */
+    /* padding-top: 100px; */
+    /* margin-bottom: 100px; */
+    /* padding-bottom: 100px; */
+    /* padding-top: 100px;
+    padding-bottom: 300px; */
 }
 
 .col-sm-4 {
