--- a/main.css
+++ b/main.css
@@ -5,10 +5,10 @@
 @import "hero.css";
 @import "credo.css";
 @import "projects.css";
-@import "resume.css";
+@import "contact.css";
 @import "skillset.css";
-@import "imageDivider.css"
-/* @import "responsive.css"; */
+@import "dividerImage.css";
+
 
 /* html {
   scroll-behavior: smooth;
@@ -18,3 +18,21 @@ body {
   max-width: 100%;
   overflow-x: hidden;
 } */
+
+/* @media (min-width: 576px) {...}
+
+@media (min-width: 768px) {...}
+
+@media (min-width: 992px) {...}
+
+@media (min-width: 1200px) {...}
+
+@media (min-width: 1400px) {...}
+
+@media (max-width: 575.98px) {...}
+
+@media (max-width: 767.98px) {...}
+
+@media (max-width: 991.98px) {...}
+
+@media (max-width: 1399.98px) {...} */
