--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,8 @@
 #fs-frm-inputs {
     font-family: 'Open Sans Source', sans-serif;
 }
+
+#contact-offset {
+    position: relative;
+    margin-top: 86%;
+}
