--- a/dividerImage.css
+++ b/dividerImage.css
@@ -1,5 +1,23 @@
 #overlay-offset {
     position: absolute;
-    width: 100%;
-    margin-top: 59%;
+    /* width: 100%; */
+    /* margin-top: 59%; */
+    border-radius: 0 !important;
+    padding: 0;
+    margin-top: 5%;
+}
+
+.card-title {
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    font-size: 32px;
+    padding-top: 4%;
+}
+
+.button-div {
+    color: white;
+    padding-top: 2%;
+    /* font-family: 'Open Sans Source', serif;
+    font-size: 18px; */
+    text-align: center;
 }
