--- a/projects.css
+++ b/projects.css
@@ -1,231 +1,4 @@
-body {
-    background-color: #fff;
-}
-
-.col4 {
-    width: 33.33333333%; float: left; position: relative;
-}
-
-.transition {
-    -webkit-transition: all .5s ease; 
-    -moz-transition: all .5s ease; 
-    -o-transition: all .5s ease;  
-    transition: all .5s ease;}
-
-body .container {
-    width: 70%; 
-    margin: 0 auto;
-}
-
-#portfolio-container {
-    margin-top: 7%;
-}
-
-.row-1 .item, .row-2 .item {
-    margin: 10px 0;
-}
-
-/* active on focus for accessibility tab navigation */
-
-.row-1 .item {
-    padding: 0;
-}
-
-.row-1 .item img {
-    padding: 0 !important; display: block; max-width: 100%; height: auto;
-}
-.row-1 a:hover .item img, .fx1 a:focus .item img {
-    opacity: 0.8;
-}
-
-.row-1 h4, .fx1 p {
-    -webkit-transition: all .5s ease; 
-    -moz-transition: all .5s ease; 
-    -o-transition: all .5s ease;  
-    transition: all .5s ease;} 
-
-.row-1 a .item h4 {
-    font-family: 'Raleway', sans-serif; 
-    font-size: 16px; 
-    position: absolute; 
-    color:#fff; 
-    text-transform: uppercase; 
-    letter-spacing: 2px; 
-    position: absolute; 
-    top:42%; 
-    left:0; 
-    right:0; 
-    margin:0 auto; 
-    text-align: center; 
-    opacity: 0;}
-
-.row-1 a:hover .item h4, .fx1 a:focus .item h4 {
-    opacity: 1;
-}
-
-.row-1 a .item p {
-    font-family: 'Raleway', sans-serif; 
-    font-size: 8px; 
-    position: absolute; 
-    color:#fff; 
-    text-transform: uppercase; 
-    letter-spacing: 2px; 
-    position: absolute; 
-    top:52%; 
-    left:0; 
-    right:0; 
-    margin:0 auto; 
-    text-align: center; 
-    opacity: 0;}
-.row-1 a:hover .item p, .fx1 a:focus .item p {
-    opacity: 1;
-}
-
-.row-2 .item {
-    padding: 0;
-}
-.row-2 .item img {
-    padding: 0 !important; 
-    display: block; 
-    max-width: 100%; 
-    height: auto;
-}
-
-.row-2 a:hover .item img, .fx2 a:focus .item img {
-    opacity: 0.9; 
-    -webkit-transform: scale(0.95); 
-    transform: scale(0.95);
-}
-
-.row-2 h4, .fx2 p, .fx2 span {
-    -webkit-transition: all .5s ease; 
-    -moz-transition: all .5s ease; 
-    -o-transition: all .5s ease;  
-    transition: all .5s ease;
-} 
-
-.row-2 a .item h4 {
-    font-family: 'Raleway', sans-serif; 
-    font-size: 16px; 
-    position: absolute; 
-    color:#fff; 
-    text-transform: uppercase; 
-    letter-spacing: 2px; 
-    position: absolute; 
-    top:42%; 
-    left:0; 
-    right:0; 
-    margin:0 auto; 
-    text-align: center; 
-    -webkit-filter: blur(5px); 
-    filter: blur(5px); opacity: 0;
-}
-
-.row-2 a:hover .item h4, .fx2 a:focus .item h4 {
-    -webkit-filter: blur(0px); 
-    filter: blur(0px); 
-    opacity: 1;
-}
-
-.row-2 a .item p {
-    font-family: 'Raleway', sans-serif; 
-    font-size: 8px; 
-    position: absolute; 
-    color:#fff; 
-    text-transform: uppercase; 
-    letter-spacing: 2px; 
-    position: absolute; 
-    top:53%; 
-    left:0; 
-    right:0; 
-    margin:0 auto; 
-    text-align: center; 
-    opacity: 0;}
-
-.row-2 a:hover .item p, .fx2 a:focus .item p {
-    opacity: 1;
-}
-
-@media screen and (max-width: 991px) {
-.col4 {width: 50%;}
-.fx5 a .item h4 {font-size: 13px;}
-}   
-
-@media screen and (max-width: 580px) {
-.col4 {width: 100%;}
-} 
-
-/* .portfolio-box-content {
-    position: relative;
-    width: 90%;
-    max-width: 25em;
-    margin: auto;
-    overflow: hidden;
-}
-
-.portfolio-box-content .portfolio-box-overlay {
-    background: rgba(0,0,0,0.7);
-    position: absolute;
-    height: 99%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transition: all 0.4s ease-in-out 0s;
-    -moz-transition: all 0.4s ease-in-out 0s;
-    transition: all 0.4s ease-in-out 0s;
-}
-
-.portfolio-box-content:hover .portfolio-box-overlay{
-    opacity: 1;
-}
-
-.portfolio-box-image {
-    width: 100%;
-}
-
-.portfolio-box-content-details {
-    position: absolute;
-    text-align: center;
-    padding-left: 1em;
-    padding-right: 1em;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    opacity: 0;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s; 
-}
-
-.portfolio-box-content:hover .portfolio-box-content-details {
-    top: 50%;
-    left: 50%;
-    opacity: 1;
-}
-
-.portfolio-box-content-details h3{
-    color: #fff;
-    font-weight: 500;
-    letter-spacing: 0.15em;
-    margin-bottom: 0.5em;
-    text-transform: uppercase; 
-}
-
-.portfolio-box-content-details p{
-    color: #fff;
-  font-size: 0.8em;
-}
-
-.portfolio-box-fadeIn-bottom {
-    top: 80%;
-} */
-
-/* .portfolio {
+.portfolio {
     font-family: "Playfair Display", serif;
     font-size: 32px;
     text-align: center;
@@ -244,12 +17,13 @@ body .container {
     -o-transition: all .5s ease;  
     transition: all .5s ease;} */
 
-/* body .container {
+body .container {
     width: 70%; 
     margin: 0 auto;
-} */
+    margin-top: 20px;
+}
 
-/* .row1 .item {
+.row1 .item {
     padding: 0;
 }
 .row1 .item img {
@@ -363,4 +137,4 @@ body .container {
 
 @media screen and (max-width: 580px) {
 .col-sm-4 {width: 100%;}
-}  */
+} 
