--- a/dividerImage.css
+++ b/dividerImage.css
@@ -4,7 +4,8 @@
     /* margin-top: 59%; */
     border-radius: 0 !important;
     padding: 0;
-    margin-top: 5%;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .card-title {
