--- a/credo.css
+++ b/credo.css
@@ -9,7 +9,8 @@
   color: black;
   font-family: "Playfair Display", serif;
   font-weight: 500;
-  margin-top: 100px;
+  margin-top: 3em;
+  /* margin-bottom: 3em; */
 }
 
 .credo-divs {
