--- a/dividerImage.css
+++ b/dividerImage.css
@@ -4,8 +4,8 @@
     /* margin-top: 59%; */
     border-radius: 0 !important;
     padding: 0;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .card-title {
@@ -15,10 +15,18 @@
     padding-top: 4%;
 }
 
-.button-div {
-    color: white;
-    padding-top: 2%;
-    /* font-family: 'Open Sans Source', serif;
-    font-size: 18px; */
-    text-align: center;
-}
+
+.resume-icon-button {
+    position: relative;
+    }
+    
+    .image {
+        /* position:absolute; */
+        /* width: 110px;
+        height: 125px; */
+        width: 130px;
+        height: 145px;
+        margin-left: 900px;
+        margin-top: 50px;
+    
+    }
