--- a/footer.css
+++ b/footer.css
@@ -3,11 +3,12 @@ position: absolute;
   bottom: 0;
   width: 100%;
   height: 20px;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .footer p {
-    margin-top: 30px;
+    margin-top: 50px;
     color: #71797e;
+    font-size: 16px;
   }
   
