--- a/navbar.css
+++ b/navbar.css
@@ -37,7 +37,10 @@
 
 .custom-toggler .navbar-toggler-icon {
  border-color: rgb(255, 255, 255);
+ color: white !important;
 }
+
+
 
 #nav-over {
   margin-left: auto;
@@ -57,7 +60,7 @@
 } */
 
 .nav-link {
-  color: white;
+  color: white !important;
   font-size: 16px;
   padding: 1rem;
   text-decoration: none;
@@ -74,127 +77,3 @@
   color: white;
   text-decoration: none;
 }
-
-/* .hero {
-    border: 5px solid red;
-    height: 100vh;
-    width: 100%;
-    background-image: url(../PortfolioProject/assets/bg-image-v2.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-} */
-
-/* .hero-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.logo-image {
-    height: 50%;
-    width: 50%;
-} */
-
-/* .hero-image {
-    height: 100%;
-    width: 100%;
-    object-fit: scale-down;
-    background-attachment: fixed;
-    background-position: center center;
-} */
-
-/* nav a {     
-font-family: 'Montserrat', sans-serif;
-font-weight: 400;
-font-style: bold;
-color: white;
-font-size: 16px;
-letter-spacing: 1.5px;
-/* word-spacing: 0px; */
-/* } */
-
-/* #navBarNav {
-   background-color: transparent;
-} */
-
-/* a nav-item {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* nav li a {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* ul a { 
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* li a {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* nav li {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* a nav-link {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white
-} */
-
-/* nav ul li a {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
-
-/* nav ul li a {
-    font-size: 16px;
-    word-spacing: 20px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: medium 500;
-    font-style: bold;
-    color: white;
-} */
