--- a/projects.css
+++ b/projects.css
@@ -2,8 +2,8 @@
     font-family: "Playfair Display", serif;
     font-size: 32px;
     text-align: center;
-    margin-top: 90px;
-    margin-bottom: 90px;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .col-sm-4 {
