--- a/skillset.css
+++ b/skillset.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-top: 75px;
+  margin-top: 3em;
   /* align-content: center;
   align-items: center; */
   /* margin-left: auto;
@@ -65,6 +65,7 @@
   display: block;
   text-align: center;
   justify-content: center;
+  color: #c5247e;
   font-size: 18px;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
@@ -89,7 +90,7 @@
 }
 
 #skill-bootstrap {
-  display: block;
+  display: none;
   text-align: center;
   justify-content: center;
   font-size: 18px;
@@ -108,6 +109,7 @@
 
 #skill-wireframe {
   display: block;
+  display: none;
   text-align: center;
   justify-content: center;
   font-size: 18px;
@@ -205,10 +207,9 @@
   font-weight: 400;
 }
 
-/* #fa-html5,
-#html-css {
+#fa-html5 {
   color: #c5247e;
-} */
+} 
 
 .html5css:hover {
   color: #c5247e;
@@ -239,8 +240,7 @@
 }
 
 
-
-.fab {
+ .fa-html5, .fa-bootstrap, .fa-js-square, .fa-react, .fa-node-js, #fagithub{
   padding-bottom: 21.875%;
   display: flex;
   justify-content: center;
