updating css and html

--- a/credo.css
+++ b/credo.css
@@ -150,6 +150,7 @@
   text-align: center;
   justify-content: center;
   justify-items: center;
+  color:#71797e;
 }
 
 .credo-divs:hover .credo-para,
